<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.billbao.sample.teams.TeamListActivity">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.billbao.sample.teams.TeamListViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/card_background"
            android:visibility="@{viewModel.isEmpty ? View.GONE : View.VISIBLE}">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/teams_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                app:items="@{viewModel.items}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="@{viewModel.isEmpty ? View.VISIBLE : View.GONE}">
            <include layout="@layout/no_data_view"/>
        </LinearLayout>
    </RelativeLayout>
</layout>
